# seattle-parks-fields

./: .pre-commit-config.yaml  Fields.ipynb  README.md  poetry.toml  pyproject.toml
src/: constants.py  fields.py  filters.py  parks_web.py  time_block.py
