[tool.poetry]
authors = ["None"]
description = ""
name = "seattle-parks-fields"
readme = 'README.md'
version = "0.1.0"

[tool.poetry.dependencies]
pandas = '>=1.1.5'
python = "^3.9.0"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pytest = "7.2.2"
pytest-cov = "^4.0"
black = '22.6.0'
coverage = {version = '^5.1', extras = ['toml']}
flake8 = "^3.7.9"
mypy = "^1.4"
isort = "5.7.0"
pre-commit = "^2.2.0"
jupyter = "^1.1.1"

